// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup renders error state 1`] = `
<Radio.Group>
  <Label>
    Choose one
    <Error
      error="error message"
    />
  </Label>
  <Grid>
    <Grid.Column
      key="example-one"
      lg={12}
      md={12}
      sm={12}
      xl={12}
      xs={12}
    >
      <div
        className="RadioWrapper"
      >
        <Radio
          checked={false}
          disabled={false}
          id="example-one"
          label="Option One"
          name="example"
          value="one"
        />
      </div>
    </Grid.Column>
    <Grid.Column
      key="example-two"
      lg={12}
      md={12}
      sm={12}
      xl={12}
      xs={12}
    >
      <div
        className="RadioWrapper"
      >
        <Radio
          checked={false}
          disabled={false}
          id="example-two"
          label="Option Two"
          name="example"
          value="two"
        />
      </div>
    </Grid.Column>
  </Grid>
</Radio.Group>
`;

exports[`RadioGroup renders radio buttons 1`] = `
<Radio.Group>
  <Label>
    Choose one
  </Label>
  <Grid>
    <Grid.Column
      key="example-one"
      lg={12}
      md={12}
      sm={12}
      xl={12}
      xs={12}
    >
      <div
        className="RadioWrapper"
      >
        <Radio
          checked={false}
          disabled={false}
          id="example-one"
          label="Option One"
          name="example"
          value="one"
        />
      </div>
    </Grid.Column>
    <Grid.Column
      key="example-two"
      lg={12}
      md={12}
      sm={12}
      xl={12}
      xs={12}
    >
      <div
        className="RadioWrapper"
      >
        <Radio
          checked={false}
          disabled={false}
          id="example-two"
          label="Option Two"
          name="example"
          value="two"
        />
      </div>
    </Grid.Column>
  </Grid>
</Radio.Group>
`;

exports[`RadioGroup renders radio buttons with first option checked 1`] = `
<Radio.Group>
  <Label>
    Choose one
  </Label>
  <Grid>
    <Grid.Column
      key="example-one"
      lg={12}
      md={12}
      sm={12}
      xl={12}
      xs={12}
    >
      <div
        className="RadioWrapper"
      >
        <Radio
          checked={true}
          disabled={false}
          id="example-one"
          label="Option One"
          name="example"
          value="one"
        />
      </div>
    </Grid.Column>
    <Grid.Column
      key="example-two"
      lg={12}
      md={12}
      sm={12}
      xl={12}
      xs={12}
    >
      <div
        className="RadioWrapper"
      >
        <Radio
          checked={false}
          disabled={false}
          id="example-two"
          label="Option Two"
          name="example"
          value="two"
        />
      </div>
    </Grid.Column>
  </Grid>
</Radio.Group>
`;

exports[`RadioGroup renders radio buttons with second option disabled 1`] = `
<Radio.Group>
  <Label>
    Choose one
  </Label>
  <Grid>
    <Grid.Column
      key="example-one"
      lg={12}
      md={12}
      sm={12}
      xl={12}
      xs={12}
    >
      <div
        className="RadioWrapper"
      >
        <Radio
          checked={false}
          disabled={false}
          id="example-one"
          label="Option One"
          name="example"
          value="one"
        />
      </div>
    </Grid.Column>
    <Grid.Column
      key="example-two"
      lg={12}
      md={12}
      sm={12}
      xl={12}
      xs={12}
    >
      <div
        className="RadioWrapper"
      >
        <Radio
          checked={false}
          disabled={true}
          id="example-two"
          label="Option Two"
          name="example"
          value="two"
        />
      </div>
    </Grid.Column>
  </Grid>
</Radio.Group>
`;
